--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: stockmusicth@gmail.com
 description: Stock music for Game, Film & Multimedia
 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://localhost:4000" # the base hostname & protocol for your site | needs full protocol : http://
+url: "http://www.motionsquaremusic.com" # the base hostname & protocol for your site | needs full protocol : http://
 
 
 # Build settings
