--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings/ these variables can be accessed by referencing --> site.(below variables)
 title: "Motion Square Music"
-email: stockmusicth@gmail.com
+email: "stockmusicth@gmail.com"
 description: "Stock music for Game, Film & Multimedia"
 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://localhost:4000" # the base hostname & protocol for your site | needs full protocol : http://
+url: "http://motionsquaremusic.com" # the base hostname & protocol for your site | needs full protocol : http://
 permalink: /:categories/:title # blog permalink setup
 
 # Build settings
